--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <ul class="list-unstyled">
                                 <li><i class="fa fa-map-marker"></i><span class="sr-only">Location:</span>Rajasthan, India</li>
                                 <li><i class="fa fa-envelope-o"></i><span class="sr-only">Email:</span><a href="mailto:sanjaysoni29032003.com">sanjaysoni29032003.com</a></li>
-                                <li><i class="fa fa-file-pdf-o"></i><span class="sr-only">Download CV:</span><a href="https://drive.google.com/file/d/1MA1GGJdPJxLgys2ZgXDxho73uk53e4gY/view?usp=sharing target="target="_blank">Download CV</a></li>
+                                <li><i class="fa fa-file-pdf-o"></i><span class="sr-only">Download CV:</span><a href="https://drive.google.com/drive/home"target="_blank">Download CV</a></li>
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
